# protoc-gen-openapiv2-yapi

./: go.mod  go.sum  main.go
internal/casing/: BUILD.bazel
internal/codegenerator/: BUILD.bazel  parse_req_test.go
internal/codegenerator/generator/: BUILD.bazel  generator.go
internal/descriptor/: BUILD.bazel  grpc_api_configuration.go  openapi_configuration.go  registry.go  registry_test.go  services.go  services_test.go  types.go
internal/descriptor/apiconfig/: BUILD.bazel  apiconfig.proto
internal/descriptor/openapiconfig/: BUILD.bazel  openapiconfig.proto
internal/generator/: generator.go
internal/genopenapi/: format_test.go  generator.go  generator_test.go  template.go  template_test.go  types.go
internal/httprule/: BUILD.bazel
yapi/: yapi.go
yapi/def/: Def.go
